# pydows

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
fluent/: __init__.py  acrylic.py  helpers.py
fluent/components/: notification.py  task_bar.py
fluent/video/: scene.py
fluent/views/: __init__.py  acrylic.py  cached_view.py  column.py  image.py  layered_view.py  notification.py  row.py  text.py  view.py
pydows/: __init__.py  constants.py  helpers.py
pydows/components/: __init__.py  notification.py  task_bar.py  window.py
pydows/video/: __init__.py  easing.py  scene.py  video_view.py
pydows/views/: __init__.py  acrylic.py  column.py  image.py  layered_view.py  row.py  shadow.py  text.py  view.py
